--- a/views/display.ejs
+++ b/views/display.ejs
@@ -27,12 +27,14 @@
 
 
 
+        <div class="up"></div>
+
           
       
-                        
+        <div class="container-fluid ">
+                        <div class="row"> 
                         <% for(var i=0; i < data.length; i++) { %>
-                                <div class="container-fluid ">
-                                                <div class="row"> 
+                                
                                                     <div class="col-lg-6 col-sm-12">
                                 
                          
@@ -46,11 +48,11 @@
                                    </div>
 
                                 </div>
-                        </div>            
-               </div> 
+               
         
                              <% } %>
-                         
+                        </div>            
+                </div> 
            
          
 
