--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
 
                        <div class="col-lg-6 col-sm-12 opt">
                             <a  class="btn" href="/">Home</a>
-                            <a  class="btn" id="down" href="#">About us</a>
+                            <a  class="btn" id="down" href="#about">About us</a>
                             <a  class="btn" href="/join">Join</a>
                          </div>
 
@@ -41,14 +41,14 @@
             
 
 
-                <div class="about"> 
+                <div class="about" id="about"> 
                        <h3>ME & Node</h3> 
                        <h3>This is the demo developed using MongoDB, Express & Node</h3>
                  </div>
             
                  <div class="moreabout"> 
-                        <h3>Node is Awesome</h3> 
-                        <h3>MongoDB is cool</h3>
+                        <h3>Ejs is used as a view engine</h3> 
+                        <h3>Mongoose is used as ORM</h3>
                   </div>
 
                 
