--- a/views/join.ejs
+++ b/views/join.ejs
@@ -32,7 +32,7 @@
     <div class="container ">
         <div class="row form"> 
             <div class="col-lg-12 col-sm-12">
-
+                        <strong>Thre is no mongodb database associated with this hosted site however if you clone <a target="_blank" href="https://github.com/hadimir22/Node-MongoDB-site.git">This Repo</a> and set a local mongodb database it will work fine</strong>
                     <form method="POST" action="/join">
                             <div class="form-group">
                               <label for="text1">Your name</label>
